# 3D-Renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  camera.cpp  camera.h  color.h  except.cpp  linalg.h  loader.cpp  loader.h  main.cpp  object.cpp  object.h  renderer.cpp  renderer.h  runtime.cpp  runtime.h  screen.cpp  screen.h  triangle.h  view.cpp  view.h  world.cpp  world.h
